# todolint

./: .dockerignore  .rubberstamp  CONFIGURATION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE.md  README.md  install.mk  makefile
examples/: .gitignore  greet.c  metrics.js
examples/docs/: backlog.txt
examples/en-us/: greet.c  metrics.js  todolint.toml
examples/en-us/docs/: backlog.txt
examples/es-mx/: greet.c  metrics.js  todolint.toml
examples/es-mx/docs/: backlog.txt
examples/zh-cn/: greet.c  metrics.js  todolint.toml
examples/zh-cn/docs/: backlog.txt
examples/zh-hk/: greet.c  metrics.js  todolint.toml
examples/zh-hk/docs/: backlog.txt
src/: lib.rs  todolint.rs
