[package]
name = "todolint"
description = "code comment SAST security scanner"
version = "0.0.6"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/todolint"

[dependencies]
clean-path = "0.2.1"
die = "0.2.0"
getopts = "0.2.24"
lazy_static = "1.5.0"
mimetype-detector = "0.3.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"

[lib]
name = "todolint"

[[bin]]
name = "todolint"
path = "src/todolint.rs"
